--- a/app/templates/EN/species/NSARP_dist_crithab.Rmd
+++ b/app/templates/EN/species/NSARP_dist_crithab.Rmd
@@ -23,3 +23,6 @@ This report is *not* the authoritative advice on Species at Risk data. Please ac
 
 ```{r child = here::here("reports/sections/crithab/crithab_en.Rmd")}
 ```
+
+```{r child = here::here("reports/sections/permits/permits_en.Rmd")}
+```
