--- a/reports/sections/ocearch/ocearch_en.Rmd
+++ b/reports/sections/ocearch/ocearch_en.Rmd
@@ -34,6 +34,9 @@ OCEARCH is a data-centric organization built to help scientists collect previous
 
 ocearchOutputList <- master_intersect(ocearch_rr$data_sf, mapDataList)
 
+# summary intro table
+introResult <- !is.null(ocearchOutputList$studyData)
+summaryIntroTable <- add_row_to_intro_summary(summaryIntroTable, name="[OCEARCH](#OCEARCH-section)", result=introResult)
 
 if (!is.null(ocearchOutputList$studyData)) {
    ocearchSummaryRow <- data.frame("CommonName" = c("White Shark"))
