--- a/reports/sections/sturg/sturg_en.Rmd
+++ b/reports/sections/sturg/sturg_en.Rmd
@@ -32,6 +32,11 @@ Areas in the Minas Basin were selected for spatial analysis to examine foraging 
 ```{r sturg-results, include=FALSE, cache=FALSE}
 sturgOutputList <- master_intersect(sturg_rr$data_sf, mapDataList)
 
+# summary intro table
+introResult <- !is.null(sturgOutputList$studyData)
+summaryIntroTable <- add_row_to_intro_summary(summaryIntroTable, name="[Sturgeon Foraging Areas](#sturg-section)", result=introResult)
+
+
 if (!is.null(sturgOutputList$studyData)) {
    sturgSummaryRow <- data.frame("CommonName" = c("Atlantic Sturgeon"))
 } else {
