add opprrpe into report and add regional plot

--- a/app/templates/EN/context/spatial_planning.Rmd
+++ b/app/templates/EN/context/spatial_planning.Rmd
@@ -8,3 +8,6 @@ This module describes information relevant to spatial planning from a variety of
 ```{r child = here::here("reports/sections/conservationSites/conservationSites_en.Rmd")}
 ```
 
+
+```{r child = here::here("reports/sections/opprrpe/opprrpe_en.Rmd")}
+```
