--- a/reports/sections/opprrpe/opprrpe_en.rmd
+++ b/reports/sections/opprrpe/opprrpe_en.rmd
@@ -40,7 +40,7 @@ write_meta(opprrpe_rr, "EN")
 #### *Area-specific Oceans Protection Plan Regional Response Planning Extents results*
 ```{r opprrpe-results, include=FALSE, cache=FALSE}
 # clip the data to the Study and Map areas:
-opprrpeOutputList <- master_intersect(opprrpe_rr$data_sf, mapDataList)
+opprrpeOutputList <- master_intersect(opprrpe_rr$data_sf, mapDataList, getRegion = TRUE)
 
 ```
 
@@ -54,11 +54,19 @@ opprrpeReport <- if (is.null(opprrpeOutputList$studyData)) {
 writeLines(noquote(opprrpeReport))
 ```
 
+```{r opprrpe-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(opprrpe_rr, "EN"), 'Regional Map showing the search area defined by the user (red outline) used to query information from Oceans Protection Plan Regional Response Planning Extents.')}
+if (!is.null(opprrpeOutputList$regionData)) {
+  # common plotting function:
+  opprrpePlotList <- plot_rr_sf(regionMap, opprrpeOutputList$regionData, attribute = opprrpe_rr$attribute, getColorMap = TRUE)
+  opprrpePlotList$polyMap
+}
+```
+
 ```{r opprrpe-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(opprrpe_rr, "EN"), 'Map showing the search area defined by the user (red outline) used to query information from Oceans Protection Plan Regional Response Planning Extents.')}
 if (!is.null(opprrpeOutputList$studyData)) {
   # common plotting function:
   plot_rr_sf(areaMap, opprrpeOutputList$mapData, attribute = 
-               opprrpe_rr$attribute)
+               opprrpe_rr$attribute, colorMap=opprrpePlotList$colorMap)
 }
 ```
 
