--- a/app/templates/EN/species/fish_invertebrates_ceteaceans.Rmd
+++ b/app/templates/EN/species/fish_invertebrates_ceteaceans.Rmd
@@ -24,6 +24,9 @@ editor_options:
 ```{r child = here::here("reports/sections/ocearch/ocearch_en.Rmd")}
 ```
 
+```{r child = here::here("reports/sections/isleMadame/isleMadameFull_en.Rmd")}
+```
+
 ```{r child = here::here("reports/sections/obis/obis_en.Rmd")}
 ```
 
