--- a/reports/sections/isleMadame/isleMadameFull_en.rmd
+++ b/reports/sections/isleMadame/isleMadameFull_en.rmd
@@ -25,11 +25,9 @@ load_rdata(c("narWhale_rr"), regionStr, env = environment())
 
 ```
 
-### **Species presence polygons created by the Integrated Marine Response Planning (IMRP) team** {#speciesPresence-section}
+### **Species presence polygons within the Bay of Fundy and Port Hawkesbury Response Plan areas** {#speciesPresence-section}
 
-Integrated Marine Response Planning (IMRP, previously Planning for Integrated Emergency Response (PIER)) collected the following datasets in response to CESD Data Requests?  
-
-BETTER ABSTRACT PLEASE.
+Species presence polygons created by the Integrated Marine Response Planning (IMRP) team (formerly Planning for Integrated Environmental Response, PIER). Presence polygons in this section were derived from reviewed reported sightings and local knowledge sources to estimate areas where species are seasonally present within the Bay of Fundy and Port Hawkesbury Area Response Plan areas ({#opprrpe-section}). For more information about how these polygons were created, please contact Adrian Hamer.
 
 #### *Area-specific Species Presence results*
 ```{r isleMadame-results, include=FALSE, cache=FALSE}
@@ -41,9 +39,9 @@ outputList <- master_intersect(narWhale_rr$data_sf, mapDataList, getRegion = TRU
 ```{r isleMadame-check, echo=FALSE, results='asis',}
 # Check if there is any data in the study area
 outputReport <- if (is.null(outputList$studyData)) {
-  paste("* There are no relevant species presence records for this search area.")
+  paste("* There are no relevant species presence polygons for this search area within the Bay of Fundy and Port Hawkesbury Response Plan areas.")
 } else {
-  paste("* There are relevant species presence records for this search area.")
+  paste("* There are relevant species presence polygons for this search area within the Bay of Fundy and Port Hawkesbury Response Plan areas.")
 }
 writeLines(noquote(outputReport))
 ```
